--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,1 @@
-<div class=""> <div back-img="car.jpg"></div> </div>
+<!--<div class="">--><!--<div back-img="car.jpg" ></div>--><!--</div>--> <div class="playButton" id="playButton">></div> <div class="resetButton" id="resetButton"><i class="fa fa-refresh"></i></div> <div radar-interactive id="chart"></div> <div id="radar"></div> <!--<div class="nodeList">--> <!--<div class="clusterName">Techniques</div>--> <!--<div class="nodeElement">--> <!--<div class="nodeCircle"></div>--> <!--<div class="nodeTitle">Reduce IRules Dependences</div>--> <!--</div>--> <!--</div>-->
