--- a/views/nav.html
+++ b/views/nav.html
@@ -1,1 +1,1 @@
-<div class="toolBar"> <a ng-href="#/virtual" class="navMenu">Traveling</a> <a ng-href="#/scroll" class="navMenu">Proximity</a> <a ng-href="#/about" class="navMenu">Radar</a> <a ng-href="#/main" class="navMenu">Main</a> </div>
+<div class="toolBar"> <a ng-href="#/virtual" class="navMenu">Infinite Scroll</a> <a ng-href="#/scroll" class="navMenu">Word Galaxy</a> <a ng-href="#/about" class="navMenu">D3 Visualization</a> <a ng-href="#/" class="navMenu">Main</a> </div>
